--- a/Speakify/Base.lproj/Main.storyboard
+++ b/Speakify/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Training" id="G6V-Rn-Oyf">
-                        <barButtonItem key="rightBarButtonItem" title="Recording" id="tLB-xx-KJg">
+                        <barButtonItem key="rightBarButtonItem" title="Recordings" id="tLB-xx-KJg">
                             <connections>
                                 <segue destination="h7S-HF-P6d" kind="show" id="Xdg-6K-SB3"/>
                             </connections>
@@ -129,7 +129,7 @@
             <objects>
                 <viewController title="Recordings" id="h7S-HF-P6d" customClass="RecordingsViewController" customModule="Speakify" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dzr-mW-0G3">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X9g-Pb-By3">
@@ -182,9 +182,9 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XlF-rO-bwh">
-                                        <rect key="frame" x="333" y="16" width="33" height="35"/>
+                                        <rect key="frame" x="334" y="17" width="33" height="35"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" image="goforward.15" catalog="system">
+                                        <state key="normal" image="goforward.10" catalog="system">
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font">
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                             </preferredSymbolConfiguration>
@@ -210,15 +210,14 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </progressView>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sav-Tt-esR">
-                                        <rect key="frame" x="227" y="16" width="33" height="35"/>
+                                        <rect key="frame" x="228" y="17" width="33" height="35"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" image="gobackward.15" catalog="system">
+                                        <state key="normal" image="gobackward.10" catalog="system">
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font">
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                             </preferredSymbolConfiguration>
                                         </state>
                                         <connections>
-
                                             <action selector="backwardClicked:" destination="h7S-HF-P6d" eventType="touchUpInside" id="NRT-hc-Fea"/>
                                         </connections>
                                     </button>
@@ -285,8 +284,8 @@
         <image name="Image" width="375" height="250"/>
         <image name="Image2" width="344" height="344"/>
         <image name="StartRecordButton" width="62" height="62"/>
-        <image name="gobackward.15" catalog="system" width="121" height="128"/>
-        <image name="goforward.15" catalog="system" width="121" height="128"/>
+        <image name="gobackward.10" catalog="system" width="121" height="128"/>
+        <image name="goforward.10" catalog="system" width="121" height="128"/>
         <image name="play.fill" catalog="system" width="116" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
